--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>Hello world</h1>
+    <title>My Assignment</title>
+    <h1>My Assignment</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum ducimus quasi earum dicta doloremque dolorum similique. Deserunt perferendis quia qui ex, possimus nam neque iste cupiditate dignissimos ducimus nobis commodi!</p>
 </head>
 <body>
